--- a/index.css
+++ b/index.css
@@ -22,3 +22,12 @@
     height: 150px;
     object-fit: cover; 
 }
+.card-img-top {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    margin-top:20px;
+  }
+  .card {
+    padding-top: 20px; 
+  }
